# kattis-cli

./: .flake8  .gitignore  .mypy.ini  Dockerfile  MANIFEST.in  Makefile  README.md  SETUP.md  build.py  build.sh  ci-cd-requirements.txt  dev.py  docker-compose.yml  pyproject.toml  requirements.txt  script.sh
.github/agents/: kattis-language-config.agent.md
.github/workflows/: ci-test.yml
icecreammachines/: icecreammachines.yaml
kattis_cli/: .kattis-cli.toml  __init__.py  client.py  config.py  download.py  fireworks.py  kattis.py  kattis_setup.py  main.py  program.py  settings.py  solution_tester.py  status.html  test_solution.py  ui.py
kattis_cli/utils/: config.py  cpp.py  languages.py  run_program.py  run_python.py  utility.py
kattis_templates/main/: c.txt  cpp.txt  java.txt  python.txt
orderlyclass/: orderlyclass.py  orderlyclass.yaml
pallatolur/: pallatolur.yaml
pallatolur/data/: pallatolur.py
src/kattis_cli/: .kattis-cli.toml  client.py  download.py  fireworks.py  kattis.py  main.py  solution_tester.py  template.py
src/kattis_cli/kattis_templates/main/: python.txt  python3.txt
src/kattis_cli/utils/: config.py  languages.py  run_program.py
test_languages/: test_run_java.py  test_run_nodejs.py
tests/: 1.json  conftest.py  karlcoder.html  prinsesse.html  random_out.py  status.json  syntax_error.py  test_config.py  test_dev.py  test_download.py  test_kattis.py  test_language_util.py  test_main.py  test_run_java.py  test_run_nodejs.py  test_run_program.py  test_setup.py  test_subprocess.py  test_template.py  test_test_manager.py  test_utility.py
tests/A0/cold/: cold.yaml
tests/A0/cold/src/cold/: cold.py
tests/A1/: A1.py
tests/A1/tests/: __init__.py
tests/OOP/cold/: cold.yaml
tests/OOP/cold/data/: 3.in
tests/cold/: cold.yaml
tests/cold/C++/: Makefile
tests/cold/C++/src/: cold.cpp  util.cpp  util.h  util.h.gch  util.h.pch
tests/cold/C++/tests/: test_util.cpp
tests/cold/OOP/src/: cold.py  temperature.py
tests/cold/java/: Cold.java  Cold_error.java
tests/cold/nodejs/: cold_error.js
tests/cold/python3/OOP/: main.py  temperature.py
tests/cold/rust/: cold  cold.rs
tests/convexpolygonarea/: convexploygonarea.py  convexpolygonarea.yaml
tests/doctest/: doctest.h
tests/monopol/: monopol.py  monopol.yaml
tests/project0/cold/: Makefile  cold.yaml
tests/project0/cold/make_tests/: __init__.py  test_cold.py  test_solution.py  test_temperature.py
tests/project0/cold/src/: cold.py
