
# PEP 621 metadata table for tools that expect [project].
[project]
name = "kattis-cli"
version = "1.2.3"
description = "A command-line tool for Kattis"
readme = "README.md"
authors = [
    { name = "Ram Basnet", email = "rbasnet@coloradomesa.edu" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
# Include the kattis_templates package data inside the installed package
# (files under src/kattis_cli/kattis_templates)
kattis_cli = [
    "kattis_templates/*",
    "kattis_templates/**",
]

[tool.poetry]
[project.urls]
"Homepage" = "https://github.com/rambasnet/kattis-cli"
"Bug Tracker" = "https://github.com/rambasnet/kattis-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.dependencies]
python = "^3.10.0"
requests = "^2.31.0"
click = "^8.1.7"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0.1"
rich = "^13.6.0"
tomlkit = "^0.12.2"
lxml = "^6.0.1"
trogon = "^0.6.0"

[tool.poetry.scripts]
kattis = 'kattis_cli.main:main'
